mise en place user+form

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,12 +5,11 @@ security:
 
   # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
   providers:
-    users_in_memory:
-      memory:
-        users:
-          admin:
-            password: '71123'
-            roles: ['ROLE_ADMIN']
+    # used to reload user from session & other features (e.g. switch_user)
+    app_user_provider:
+      entity:
+        class: App\Entity\User
+        property: email
 
   firewalls:
     dev:
@@ -19,12 +18,18 @@ security:
 
     main:
       lazy: true
-      provider: users_in_memory
-      form_login: ~
-      logout: ~
+      provider: app_user_provider
+      form_login:
+        login_path: app_login
+        check_path: app_login
+        enable_csrf: true
+      logout:
+        path: app_logout
+        # where to redirect after logout
+        # target: app_any_route
 
   access_control:
-    - { path: ^/admin, roles: ROLE_ADMIN }
+    # - { path: ^/admin, roles: ROLE_ADMIN }
     # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
