--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,6 +1,8 @@
 security:
   # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
   password_hashers:
+    App\Entity\User:
+      algorithm: auto
     Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
 
   # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
@@ -19,18 +21,28 @@ security:
     main:
       lazy: true
       provider: app_user_provider
+      entry_point: App\Security\LoginAuthenticator
+      custom_authenticators:
+        - App\Security\LoginAuthenticator
       form_login:
         login_path: app_login
         check_path: app_login
         enable_csrf: true
       logout:
         path: app_logout
+      custom_authenticator: App\Security\LoginAuthenticator
+
+      remember_me:
+        secret: '%kernel.secret%'
+        lifetime: 604800
+        path: /
+        always_remember_me: true
         # where to redirect after logout
         # target: app_any_route
 
   access_control:
-    # - { path: ^/admin, roles: ROLE_ADMIN }
-    # - { path: ^/profile, roles: ROLE_USER }
+    - { path: ^/admin, roles: ROLE_ADMIN }
+    - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
   security:
